--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "description" : "Imaging APIs for the XP Framework",
   "keywords": ["module", "xp"],
   "require" : {
-    "xp-framework/core": "dev-master",
+    "xp-framework/core": "~6.0",
     "xp-framework/xml" : "~6.0",
     "php" : ">=5.4.0"
   },
