--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,18 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - nightly
   - hhvm
   - hhvm-nightly
 
 matrix:
   allow_failures:
+    - php: nightly
     - php: hhvm
     - php: hhvm-nightly
 
 before_script:
-  - wget 'https://github.com/xp-framework/xp-runners/releases/download/v5.2.0/setup' -O - | php
+  - wget 'https://github.com/xp-framework/xp-runners/releases/download/v5.2.1/setup' -O - | php
   - composer install --prefer-dist
   - echo "vendor/autoload.php" > composer.pth
   - echo "use=vendor/xp-framework/core" > xp.ini
