--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
   "description" : "Imaging APIs for the XP Framework",
   "keywords": ["module", "xp"],
   "require" : {
-    "xp-framework/core": "~6.0",
-    "xp-framework/xml" : "~6.0",
-    "php" : ">=5.4.0"
+    "xp-framework/core": "^6.5",
+    "xp-framework/xml" : "^6.0",
+    "php" : ">=5.5.0"
   },
   "autoload" : {
     "files" : ["src/main/php/autoload.php"]
