--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,12 @@
   "description" : "Imaging APIs for the XP Framework",
   "keywords": ["module", "xp"],
   "require" : {
-    "xp-framework/core": "^6.5",
-    "xp-framework/xml" : "^6.0",
+    "xp-framework/core": "^7.0 | ^6.5",
+    "xp-framework/xml" : "^7.0 | ^6.3",
     "php" : ">=5.5.0"
+  },
+  "require-dev" : {
+    "xp-framework/unittest": "^7.0 | ^6.5"
   },
   "autoload" : {
     "files" : ["src/main/php/autoload.php"]
