--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
   "description" : "Imaging APIs for the XP Framework",
   "keywords": ["module", "xp"],
   "require" : {
-    "xp-framework/core": "^7.0 | ^6.5",
-    "xp-framework/xml" : "^7.0 | ^6.3",
+    "xp-framework/core": "^8.0 | ^7.0 | ^6.5",
+    "xp-framework/xml" : "^8.0 | ^7.0 | ^6.3",
     "php" : ">=5.5.0"
   },
   "require-dev" : {
