--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,17 @@ php:
   - 5.6
   - 7.0
   - 7.1
-  - hhvm
+  - 7.2
+  - 7.3
+  - 7.4
   - nightly
 
 matrix:
   allow_failures:
-    - php: hhvm
     - php: nightly
 
 before_script:
-  - curl -sSL https://dl.bintray.com/xp-runners/generic/xp-run-master.sh > xp-run
+  - curl -sSL https://dl.bintray.com/xp-runners/generic/xp-run-8.1.7.sh > xp-run
   - composer install --prefer-dist
   - echo "vendor/autoload.php" > composer.pth
 
