--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "description" : "Imaging APIs for the XP Framework",
   "keywords": ["module", "xp"],
   "require" : {
-    "xp-framework/core": "^11.0 | ^10.0",
+    "xp-framework/core": "^12.0 | ^11.0 | ^10.0",
     "xp-framework/xml" : "^11.0 | ^10.0",
     "php" : ">=7.0.0"
   },
