--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "keywords": ["module", "xp"],
   "require" : {
     "xp-framework/core": "^12.0 | ^11.0 | ^10.0",
-    "xp-framework/xml" : "^11.0 | ^10.0",
+    "xp-framework/xml" : "^12.0 | ^11.0 | ^10.0",
     "php" : ">=7.0.0"
   },
   "require-dev" : {
