--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "keywords": ["module", "xp"],
   "require" : {
     "xp-framework/core": "^12.0 | ^11.0 | ^10.0",
-    "php" : ">=7.4.0"
+    "php" : ">=7.4.0",
+    "ext-gd" : "*"
   },
   "require-dev" : {
     "xp-framework/test": "^2.0 | ^1.0"
