--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
-        extensions: com_dotnet
+        extensions: com_dotnet, gd
         ini-values: date.timezone=Europe/Berlin
 
     - name: Validate composer.json and composer.lock
